# bounty-hunter-toolkit

./: .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  README.md  apply_fix.py  bounty_hunter_toolkit.py  pyproject.toml  sarif_export.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
action/: action.yml
bounty_hunter_toolkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: bug-bounty-automation.md  evidence-collection-automation.md  recon-pipeline-with-python.md
tests/: conftest.py  test_api_fixtures.py  test_apply_fix.py  test_bounty_hunter_toolkit.py  test_cwe.py  test_sarif.py
tests/fixtures/: bugcrowd_submission.json  github_issue.json  hackerone_report.json
