[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "bounty-hunter-toolkit"
version = "1.1.0"
description = "Bug bounty automation: recon, BOLA, reporting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "aaameobius-crypto"}]
keywords = ["bugbounty", "security", "bola", "recon"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
bounty-hunter-toolkit = "bounty_hunter_toolkit:main"

[tool.setuptools]
py-modules = ["apply_fix", "bounty_hunter_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
per-file-ignores = { "apply_fix.py" = ["E501"] }

[project.urls]
Homepage = "https://github.com/aaameobius-crypto/bounty-hunter-toolkit"
